--- a/WebContent/resources/css/userLayout.css
+++ b/WebContent/resources/css/userLayout.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+ @charset "UTF-8";
 
 
 :root {
@@ -281,12 +281,17 @@ footer {
   position: absolute;
   top: -4px;
   left: 0;
-  width: 400px;
+  width: 280px;
   height: 4px;
   background-color: rgb(255, 255, 255);
 }
 .items:nth-child(2)::before {
-  left: 398px;
+  left: 250px;
+  top: -4px;
+  background-color: rgb(255, 255, 255);
+}
+.items:nth-child(3)::before {
+  left: 518px;
   top: -4px;
   background-color: rgb(255, 255, 255);
 }
@@ -447,6 +452,9 @@ th {
   border: 1px solid var(--color-light-grey);
 }
 #tab2 {
+  border: 1px solid var(--color-light-grey);
+}
+#tab3 {
   border: 1px solid var(--color-light-grey);
 }
   
