--- a/WebContent/resources/css/userLayout.css
+++ b/WebContent/resources/css/userLayout.css
@@ -655,3 +655,128 @@ footer {
   border-top: 3px solid tomato;
 }
 
+
+/* 진행중인 경매 */
+
+///// 진행중인 경매
+.main_shopItem {
+  display: flex;
+  flex-direction: column;
+}
+.tabs_shopItem {
+  display: flex;
+  justify-content: center;
+}
+.tabs_shopItem .tab_shopItem {
+  font-size: 1rem;
+  text-align: center;
+  line-height: 30px;
+  width: 270px;
+  height: 50px;
+  cursor: pointer;
+  background-color: rgb(243, 243, 243);
+  color: rgb(20, 19, 19);
+  position: relative;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border: 1px solid var(--color-dark-white);
+}
+.content_shopItem {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  border: 1px solid var(--color-dark-white);
+  width: 1400px;
+  height: 100%;
+}
+.items2 {
+  width: 1400px;
+  height: 100%;
+  display: none;
+  padding: 60px;
+  background-color: var(--color-white);
+  position: relative;
+}
+.items2::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: 295px;
+  width: 268px;
+  height: 4px;
+  background-color: rgb(255, 255, 255);
+}
+.items2:nth-child(2)::before {
+  left: 564px;
+  top: -4px;
+  background-color: rgb(255, 255, 255);
+}
+.items2:nth-child(3)::before {
+  left: 835px;
+  top: -4px;
+  background-color: rgb(255, 255, 255);
+}
+.items2.active {
+  display: inline-block;
+}
+
+.content_shopItem_listBox {
+  width: 220px;
+  height: 380px;
+  border: 1px solid var(--color-dark-white);
+  margin: 8px 12px;
+}
+.content_shopItem_listBox ul {
+  padding: 4px 8px;
+}
+.content_shopItem_listBox h3 {
+  font-size: 20px;
+  font-weight: 500;
+  border-bottom: 0.5px solid var(--color-light-white);
+}
+.shopItem_img img {
+  width: 100%;
+  height: 220px;
+  border-bottom: 1px solid var(--color-dark-grey);
+}
+
+.content_shopItem_btn {
+  display: flex;
+  justify-content: space-around;
+  border: 10px 0;
+}
+
+.content_shopItem_btn li {
+  background-color: var(--color-dark-grey);
+  padding: 4px 14px;
+  border-radius: 4px;
+}
+.content_shopItem_btn li a {
+  color: var(--color-white);
+}
+
+#tab11 {
+  border: 1px solid var(--color-light-grey);
+}
+
+#tab12 {
+  border: 1px solid var(--color-light-grey);
+}
+
+#tab13 {
+  border: 1px solid var(--color-light-grey);
+}
+
+.ltem2_shopItembox {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+.tabb11_box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+
