--- a/WebContent/resources/css/mainLayout.css
+++ b/WebContent/resources/css/mainLayout.css
@@ -595,9 +595,150 @@ th {
 
 
 /* footer */
+
+/* footer */
+
 footer {
-  height: 200px;
-  border: solid 1px yellow;
-  background-color: var(--color-dark-white);
+  border-top: 100px;
+  padding-top: 140px;
+  background-color: #ffffff;
 }
+
+.footer_top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style: none;
+  padding: 10px 0;
+  border-bottom: 1px solid var(--color-light-white);
+}
+.foot_top {
+  display: flex;
+  justify-content: space-around;
+}
+.foot_top ul li {
+  list-style: none;
+}
+.footer_top p {
+  color: var(--color-dark-grey);
+  font-size: 14px;
+}
+
+.footer_bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 8px 100px;
+  list-style: none;
+}
+.footer_bottom p {
+  color: var(--color-light-grey);
+  font-size: 14px;
+}
+
+.foot_bottom_box {
+  line-height: 100%;
+  background-color: none;
+  border: 0.5px solid var(--color-light-white);
+  width: 180px;
+  height: 40px;
+  font-size: 14px;
+  border-radius: 4px;
+  color: var(--color-light-grey);
+}
+
+/* 공용  */
+
+/* form 공용 */
+
+.form_box {
+  margin: 0 auto;
+  width: 800px;
+  height: 100vh;
+  border: 2px solid var(--color-light-white);
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  width: 600px;
+  height: 100vh;
+  padding: 30px 30px;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+.form_title {
+  display: inline;
+  color: var(--color-dark-grey);
+  font-size: 18px;
+  font-weight: 500;
+  padding: 0 20px;
+}
+.form_input {
+  width: 300px;
+  height: 25px;
+  border: 1px solid var(--color-light-grey);
+  border-radius: 3px;
+}
+
+.form_tab {
+  padding: 20px 0;
+  border-bottom: 0.5px solid var(--color-dark-white);
+}
+.form_btn {
+  width: 120px;
+
+  border-style: none;
+  border-radius: 3px;
+  background-color: var(--color-light-grey);
+  font-size: 20px;
+  padding: 5px;
+  color: var(--color-light-white);
+}
+
+.select_tab {
+  width: 230px;
+  border-style: none;
+  border-radius: 3px;
+  background-color: var(--color-light-grey);
+  font-size: 20px;
+  padding: 5px;
+  color: var(--color-white);
+}
+
+
+/* member */
+
+.form_input2 {
+  width: 180px;
+  height: 25px;
+  border: 1px solid var(--color-light-grey);
+  border-radius: 3px;
+}
+
+.form_btn_box {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0;
+}
+
+.form_btn_box li {
+  padding: 30px;
+}
+.form_btn2 {
+  width: 120px;
+  margin: 10 auto;
+  border-style: none;
+  border-radius: 3px;
+  background-color: var(--color-light-grey);
+  font-size: 20px;
+  padding: 5px 30px;
+  color: var(--color-white);
+}
+
 /*# sourceMappingURL=style.css.map */
