--- a/WebContent/resources/css/userLayout.css
+++ b/WebContent/resources/css/userLayout.css
@@ -87,7 +87,7 @@ ul{
 /* 레이아웃 사이즈 */
 header {
     height: 100px;
-    border:  solid 1px red;
+
 }
 
 header #top {
@@ -105,7 +105,7 @@ section {
     margin: auto;
     width: 1700px;
     
-    border: solid 1px red; 
+ 
 }
 
 #side_menu{
@@ -139,12 +139,12 @@ section {
     width: 1700px;
  
     margin: 0 auto;
-    border: solid 1px blue;
+    
 }
 
 footer {
     height: 200px;
-    border: solid 1px yellow;
+ 
     background-color: var(--color-dark-white);
 }
 
@@ -479,9 +479,7 @@ th {
   background-color: var(--color-white);
   border-radius: 4px;
   margin-left: 30px;
-<<<<<<< HEAD
-}
-=======
+
 }
 
 
@@ -572,8 +570,7 @@ ul > li {
   display: block;
 }
 
-.select_tab {
-}
+
 /* footer */
 
 footer {
@@ -661,7 +658,7 @@ footer {
 
 /* 진행중인 경매 */
 
-///// 진행중인 경매
+
 .main_shopItem {
   display: flex;
   flex-direction: column;
@@ -781,5 +778,100 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
+/* form 공용 */
+
+/* form 공용 */
+
+.form_box {
+  margin: 0 auto;
+  width: 800px;
+  height: 100vh;
+  border: 2px solid var(--color-light-white);
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  width: 600px;
+  height: 100vh;
+  padding: 30px 30px;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+.form_title {
+  display: inline;
+  color: var(--color-dark-grey);
+  font-size: 18px;
+  font-weight: 500;
+  padding: 0 20px;
+}
+.form_input {
+  width: 300px;
+  height: 25px;
+  border: 1px solid var(--color-light-grey);
+  border-radius: 3px;
+}
+
+.form_tab {
+  padding: 20px 0;
+  border-bottom: 0.5px solid var(--color-dark-white);
+}
+.form_btn {
+  width: 120px;
+
+  border-style: none;
+  border-radius: 3px;
+  background-color: var(--color-light-grey);
+  font-size: 20px;
+  padding: 5px;
+  color: var(--color-light-white);
+}
+
+.select_tab {
+  width: 230px;
+  border-style: none;
+  border-radius: 3px;
+  background-color: var(--color-light-grey);
+  font-size: 20px;
+  padding: 5px;
+  color: var(--color-white);
+}
+
+
+/* member */
+
+.form_input2 {
+  width: 180px;
+  height: 25px;
+  border: 1px solid var(--color-light-grey);
+  border-radius: 3px;
+}
+
+.form_btn_box {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0;
+}
+
+.form_btn_box li {
+  padding: 30px;
+}
+.form_btn2 {
+  width: 120px;
+  margin: 10 auto;
+  border-style: none;
+  border-radius: 3px;
+  background-color: var(--color-light-grey);
+  font-size: 20px;
+  padding: 5px 30px;
+  color: var(--color-white);
+}
+
 
 
