관리자 페이지 기능 완성 css 적용

--- a/WebContent/resources/css/mainLayout.css
+++ b/WebContent/resources/css/mainLayout.css
@@ -869,6 +869,15 @@ th {
   border-radius: 4px;
 }
 
+.admin_dtn2_content2 {
+  width: 80px;
+  height: 30px;
+  background-color: #0e2652;
+  color: var(--color-white);
+  font-size: 12px;
+  border: none;
+  border-radius: 4px;
+}
 .ssss{
 	display : flex;
 	 justify-content: space-around;
