--- a/WebContent/resources/css/userLayout.css
+++ b/WebContent/resources/css/userLayout.css
@@ -12,7 +12,7 @@
     --color-grey: #616161;
     --color-light-grey: #7c7979;
     --color-blue: #73aace;
-    --color-dark-blue: cornflowerblue;
+    --color-dark-blue: #0e2652;
     --color-yellow: #fff7d1;
     --color-orange: #feb546;
     --color-black: #000000;
@@ -85,16 +85,34 @@ ul{
   
 
 /* 레이아웃 사이즈 */
+/* header  로그인  */
 header {
-    height: 100px;
+  height: 120px;
 
 }
 
-header #top {
-    height: 30px;
-    background-color: #e2e2e2;
+#top {
+	
+   display: flex;
+  justify-content: flex-end;
+  align-items: center;
+   height: 50px;
+
 }
 
+.login_menu {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+}
+
+.login_menu li  {
+  margin: 0 10px;
+  padding: 8px 20px;
+  color : var(--color-dark-grey);
+  font-weight : 550;
+
+}
 #main_menu {
     height: 70px;
     border-top :solid 1px #e2e2e2;
@@ -115,6 +133,8 @@ section {
      
     
 }
+
+
 
 .mypage_menu{
     padding: 0 16px;
@@ -153,16 +173,7 @@ footer {
 
 /* header */
 
-.login_menu{
-    display: flex;
-    list-style-type: none;
-    flex-direction: row-reverse;
-   
-}
 
-.login_menu li {
-    padding: 8px 24px ; 
-}
 
 #logo {
     display: flex;
@@ -481,7 +492,7 @@ th {
   margin-left: 30px;
 
 }
-}
+
 
 
 /* form 공용 */
@@ -874,5 +885,57 @@ footer {
   color: var(--color-white);
 }
 
+.shop_signup {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+}
 
 
+.shop_signup li {
+  padding: 8px 10px;
+  color: var( --color-dark-blue);
+}
+.shop_signup li a {
+  font-weight: 550;
+  padding: 0 15px;
+  color : var( --color-light-grey);
+}
+
+
+.login_menu {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+}
+
+.login_menu li  {
+  margin: 0 10px;
+  padding: 8px 20px;
+  color : var(--color-dark-grey);
+  font-weight : 550;
+
+}
+
+
+.shop_menu {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+}
+
+.shop_menu li a{
+  margin: 0 10px;
+  padding: 8px 20px;
+  border: 1px solid var( --color-dark-blue);
+  background-color:var( --color-dark-blue);
+    font-weight: 500;
+  border-radius: 5px;
+}
+
+
+.shop_menu li  {
+  color: var(--color-white);
+  font-weight: 500;
+  font-size: var(--font-small);
+}
