--- a/WebContent/resources/css/userLayout.css
+++ b/WebContent/resources/css/userLayout.css
@@ -937,3 +937,11 @@ footer {
     /* justify-content: center; */
     margin: auto;
 }
+
+.myMenuList{
+
+	display : flex;
+	justify-content : center;
+	margin : 100px;
+	
+}
